# laravelapp/routes/api.php
@@ -22,23 +22,28 @@ use App\Http\Controllers\Api\SessionController;
 Route::apiResource('/users', UserController::class)
     ->only('index');
 
-Route::post('/login', [AuthController::class, 'login'])->name('api.auth.login');
-
-Route::post('/register', [AuthController::class, 'register'])->name('api.auth.register');
-
-Route::apiResource('/sessions', SessionController::class)->only('index');
-
-Route::group(['middleware' => 'auth:sanctum'], function () {
-    Route::post('/player/create', [PlayerController::class, 'create'])->name('api.player.create');
-
-    Route::post('/session/create', [SessionController::class, 'create'])->name('api.session.create');
-
-    Route::get('/tokenVerification', function () {
-        return 'ok';
-    });
-
-    Route::apiResource('/profile', ProfileController::class)
-        ->only('create');
-
-    Route::post('/file/upload', [FileController::class, 'upload']);
+Route::group(['prefix' => 'auth'], function (){
+    Route::post('/login', [AuthController::class, 'login'])->name('api.auth.login');
+    Route::post('/register', [AuthController::class, 'register'])->name('api.auth.register');
 });
+
+Route::group(['prefix' => 'players', 'middleware' => 'auth:sanctum'], function () {
+    Route::post('/', [PlayerController::class, 'create'])->name('api.player.create');
+});
+
+Route::group(['prefix' => 'sessions', 'middleware' => 'auth:sanctum'], function () {
+    Route::post('/', [SessionController::class, 'create'])->name('api.session.create');
+    Route::apiResource('/', SessionController::class)->only('index');
+});
+
+
+
+
+//Route::group(['middleware' => 'auth:sanctum'], function () {
+//    Route::get('/tokenVerification', function () {
+//        return 'ok';
+//    });
+//    Route::apiResource('/profile', ProfileController::class)
+//        ->only('create');
+//    Route::post('/file/upload', [FileController::class, 'upload']);
+//});
